--- a/src/view/viewbox.css
+++ b/src/view/viewbox.css
@@ -13,8 +13,8 @@
 /* 基本 Box */
 .box-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* 自適應列數，每列至少200px */
-  gap: 16px; /* 項目間距 */
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr)); /* 自適應列數，每列至少200px */
+  gap: 14px; /* 項目間距 */
 }
 
 /* 單個 Box 樣式 */
@@ -58,7 +58,25 @@
   padding: 20px;
   border-radius: 8px;
   text-align: center;
-  max-width: 600px;
+  max-width: 900px;
+  max-height: 500px;
+  overflow: hidden;
+}
+.scrollable-content {
+  max-height: 400px; 
+  overflow-y: auto;  
+  padding: 10px;
+  border-radius: 8px;
+  text-align: left;
+}
+
+.scrollable-content img {
+  position: relative;
+  display: block; /* 确保图片独占一行 */
+  margin: 0 auto; /* 居中显示图片 */
+  max-width: 100%; /* 防止图片超出容器宽度 */
+  height: auto; /* 保持图片比例 */
+  border-radius: 4px; /* 增加图片的视觉美感 */
 }
 
 .modal-content button {
@@ -86,4 +104,21 @@
 i.bi-x {
     font-size: 24px;
     color: #333;
+}
+
+.language-switch {
+  position: absolute;
+  top: 70px;
+  right: 50px; /* 距離右側 50px，避免與關閉按鈕重疊 */
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.language-switch span {
+  font-size: 14px;
+}
+
+.language-switch .form-check-input {
+  cursor: pointer;
 }
